syntax = "proto3";

message Product {
    string product_name = 1;
    int32 available_quantities = 2;
    repeated string images = 3;
}